ported to 1.20.1
made it for 1.16.5 by accident not realizing it was supposed to be for 1.20.1